--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng build --configuration production --base-href /eyes-off-games/ --deploy-url /eyes-off-games/ && npx angular-cli-ghpages --dir=dist/impostor-game/browser"
   },
   "private": true,
   "dependencies": {
