--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
+        working-directory: jogo-do-impostor
         run: npm ci
 
       - name: Build Angular app
