--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --configuration production --base-href /jogo-do-impostor/ --deploy-url /jogo-do-impostor/ && npx angular-cli-ghpages --dir=dist/impostor-game/browser"
+    "deploy": "npx ng build --configuration production --base-href /jogo-do-impostor/ --deploy-url /jogo-do-impostor/ && npx angular-cli-ghpages --dir=dist/impostor-game/browser"
   },
   "private": true,
   "dependencies": {
