--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,27 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Angular app
-        run: |
-          npx ng build --configuration production \
-          --base-href /jogo-do-impostor/ \
-          --deploy-url /jogo-do-impostor/
-
-      - name: Deploy to GitHub Pages
-        run: |
-          npx angular-cli-ghpages \
-          --dir=dist/impostor-game/browser \
-          --no-silent
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy
+        run: npm run deploy
