--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,9 @@ on:
       - main
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   deploy:
@@ -27,10 +29,10 @@ jobs:
       - name: Build Angular app
         run: npx ng build impostor-game --configuration production
 
-      - name: Configure git user
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist/impostor-game/browser
 
       - name: Deploy to GitHub Pages
-        run: npx angular-cli-ghpages --dir=dist/impostor-game/browser
+        uses: actions/deploy-pages@v4
