--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,10 @@ jobs:
         run: npm ci
 
       - name: Build Angular app
-        run: npx ng build impostor-game --configuration production
+        run: npx ng build impostor-game \
+          --configuration production \
+          --base-href /jogo-do-impostor/ \
+          --deploy-url /jogo-do-impostor/
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
